Fix title and subtitle spacing

--- a/packages/akamaitraffic2/client/widget.css
+++ b/packages/akamaitraffic2/client/widget.css
@@ -5,8 +5,3 @@
 .akamaitraffic2 .label {
   font-weight: 300;
 }
-
-
-.akamaitraffic2 h1 {
-	line-height: 2em;
-}
